# linear_algebra

./: CMakeLists.txt  README.md  main.cpp
LinearAlgebra/Matrix/: Matrix.h
LinearAlgebra/SynkhornProcess/: SynkhornProcess.h
Tests/: CMakeLists.txt  MatrixTests.cpp  SynkhornTests.cpp
docs/: Synkhorn.md
docs/Totally Positive and Totally Nonnegative Matricies/: planar_nets.ipynb  totally_positive_sort_through.ipynb
